<resources>
    <string name="app_name">AndroidBIS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Postavke</string>
    <string name="action_logout">Log out</string>
    <string name="action_getfaults">Preuzmi intervencije</string>
    <string name="error_nointernet">Došlo je do greške. Provjerite internet vezu.</string>
    <string name="spinner_nothing_selected_choose">Odaberi</string>
    <string name="spinner_not_assigned">N/A</string>
    <string-array name="spinnerYesNo">
        <item>@string/spinnerYes</item>
        <item>@string/spinnerNo</item>
    </string-array>
    <string name="spinnerYes">DA</string>
    <string name="spinnerNo">NE</string>
    <string name="permission_initial_explanation_title">Odobrenja</string>
    <string name="permission_initial_explanation_message">Da bi koristili sve funkcije aplikacije, potrebno je da dopustite <b>SVA</b> odobrenja!</string>
    <string name="permission_initial_explanation_positiveButton">DALJE</string>
    <string name="permission_initial_explanation_negativeButton">ODUSTANI</string>
    <string name="permission_camera_title">Odobrenje</string>
    <string name="permission_camera_message">Da bi koristili sve funkcije aplikacije potrebno je da dopustite pristup kameri</string>
    <string name="permission_read_contacts_title">Odobrenje</string>
    <string name="permission_read_contacts_message">Da bi koristili sve funkcije aplikacije potrebno je da dopustite pristup kontaktima</string>
    <string name="permission_access_coarse_location_title">Odobrenje</string>
    <string name="permission_access_coarse_location_message">Da bi koristili sve funkcije aplikacije potrebno je da dopustite pristup lokaciji</string>
    <string name="permission_read_phone_state_title">Odobrenje</string>
    <string name="permission_read_phone_state_message">Da bi koristili sve funkcije aplikacije potrebno je da dopustite pristup pozivima</string>
    <string name="permission_send_sms_title">Odobrenje</string>
    <string name="permission_send_sms_message">Da bi koristili sve funkcije aplikacije potrebno je da dopustite pristup porukama</string>
    <string name="permission_read_external_storage_title">Odobrenje</string>
    <string name="permission_read_external_storage_message">Da bi koristili sve funkcije aplikacije potrebno je da dopustite pristup pohrani</string>
    <string name="login_et_username">Korisničko ime</string>
    <string name="login_et_password">Password</string>
    <string name="login_btnlogin">Login</string>
    <string name="login_error_username">Unesite koriničko ime</string>
    <string name="login_error_username_desc">Polje ne smije biti prazno!</string>
    <string name="login_error_password">Unesite šifru</string>
    <string name="login_error_password_desc">Polje ne smije biti prazno!</string>
    <string name="login_nointernet">Provjerite internet vezu</string>
    <string name="dialog_currentuser">Došlo je do greške. Provjerite internet vezu.</string>
    <string name="dialog_currentuser_positive_button">POKUŠAJ PONOVO</string>
    <string name="dialog_currentuser_negative_button">ODUSTANI</string>
    <string name="dialog_login_message">Logujem se…</string>
    <string name="snackbar_login_wrong_credidentals">Neispravni pristupni podaci</string>
    <string name="nav_item_faults">Otvorene intervencije</string>
    <string name="nav_title_forms">Formulari</string>
    <string name="nav_item_servicesheet">Servisni list</string>
    <string name="nav_title_myDocuments">Moji dokumenti</string>
    <string name="nav_item_myServicesheets">Servisni listovi</string>
    <string name="nav_title_search">Pretraga</string>
    <string name="nav_item_checkproduct">Provjeri proizvod</string>
    <string name="nav_item_searcharchive">Pretraži arhivu</string>
    <string name="nav_title_other">Ostalo</string>
    <string name="nav_item_map">Karta</string>
    <string name="fragment_title_faults">Otvorene intervencije</string>
    <string name="fragment_title_servicesheet">Servini list</string>
    <string name="fragment_title_myServicesheets">Moji servisni listovi</string>
    <string name="fragment_title_checkproduct">Provjeri proizvod</string>
    <string name="fragment_title_searcharchive">Pretraži arhivu</string>
    <string name="fragment_title_addfault">Prijavi intervenciju</string>
    <string name="fragment_title_map">Karta</string>
    <string name="fragment_faults_listview_faultcount">Otvorenih intervencija:</string>
    <string name="snackbar_delete_fault">Dali sigurno želite ukloniti intervenciju?</string>
    <string name="snackbar_delete_fault_client">Klijent:</string>
    <string name="snackbar_delete_fault_place">Mjesto:</string>
    <string name="snackbar_delete_fault_yes">UKLONI</string>
    <string name="prgDialog_deleting">Uklanjam intervenciju…</string>
    <string name="snackbar_delete_success">Intervencija uspješno uklonjena</string>
    <string name="snackbar_delete_failure">Došlo je do greške. Pokušajte ponovo.</string>
    <string name="snackbar_delete_error">Došlo je do greške. Provjerite internet vezu.</string>
    <string name="dialog_update_title">Izmijeni intervenciju</string>
    <string name="dialog_update_positiveButton">IZMIJENI</string>
    <string name="dialog_update_negativeButton">ODUSTANI</string>
    <string name="dialog_update_phone1">Kontakt broj 1</string>
    <string name="dialog_update_phone2">Kontakt broj 2</string>
    <string name="dialog_update_faultdescription">Opis kvara</string>
    <string name="prgDialog_updating">Mijenjam intervenciju…</string>
    <string name="snackbar_update_success">Intervencija uspješno izmijenjena</string>
    <string name="snackbar_update_failure">Došlo je do greške. Pokušajte ponovo.</string>
    <string name="snackbar_update_error">Došlo je do greške. Provjerite internet vezu.</string>
    <string name="snackbar_archive_fault">Dali sigurno želite arhivirati intervenciju?</string>
    <string name="snackbar_archive_fault_client">Klijent:</string>
    <string name="snackbar_archive_fault_place">Mjesto:</string>
    <string name="snackbar_archive_fault_yes">ARHIVIRAJ</string>
    <string name="prgDialog_archiving">Arhiviram intervenciju…</string>
    <string name="snackbar_archive_success">Intervencija uspješno arhivirana</string>
    <string name="snackbar_archive_failure">Došlo je do greške. Pokušajte ponovo.</string>
    <string name="snackbar_archive_error">Došlo je do greške. Provjerite internet vezu.</string>
    <string name="spinner_nothing_selected_prompt">Sve intervencije</string>
    <string name="fragment_faults_listview_details_date">Datum prijave:</string>
    <string name="fragment_faults_listview_details_time">Vrijeme prijave:</string>
    <string name="fragment_faults_listview_details_client">Klijent:</string>
    <string name="fragment_faults_listview_details_address">Adresa:</string>
    <string name="fragment_faults_listview_details_place">Mjesto:</string>
    <string name="fragment_faults_listview_details_phone1">Kontakt broj 1:</string>
    <string name="fragment_faults_listview_details_phone2">Kontakt broj 2:</string>
    <string name="fragment_faults_listview_details_description">Opis kvara:</string>
    <string name="fragment_faults_listview_details_note">Napomena:</string>
    <string name="fragment_addfault_sn">Serijski broj</string>
    <string name="fragment_addfault_client">Klijent</string>
    <string name="fragment_addfault_address">Adresa</string>
    <string name="fragment_addfault_place">Mjesto</string>
    <string name="fragment_addfault_phone1">Kontakt broj 1</string>
    <string name="fragment_addfault_phone2">Kontakt broj 2</string>
    <string name="fragment_addfault_faultDescription">Opis kvara</string>
    <string name="fragment_addfault_note">Napomena</string>
    <string name="fragment_addfault_btnAddFault">PRIJAVI INTERVENCIJU</string>
    <string name="prgDialog_addingfault">Prijavljujem intervenciju</string>
    <string name="snackbar_addfault_success">Intervencija uspješno prijavljena</string>
    <string name="snackbar_addfault_failure">Došlo je do greške</string>
    <string name="snackbar_addfault_error">Došlo je do greške. Provjerite internet vezu.</string>
    <string name="fragment_servicesheet_currency">KM</string>
    <string name="fragment_servicesheet_title_clientinfo">Podaci o kupcu</string>
    <string name="fragment_servicesheet_client">Klijent</string>
    <string name="fragment_servicesheet_address">Adresa</string>
    <string name="fragment_servicesheet_place">Mjesto</string>
    <string name="fragment_servicesheet_phone1">Kontakt broj 1</string>
    <string name="fragment_servicesheet_phone2">Kontakt broj 2</string>
    <string name="fragment_servicesheet_title_productinfo">Podaci o proizvodu</string>
    <string name="fragment_servicesheet_productType">Vrsta proizvoda</string>
    <string name="fragment_servicesheet_sn">Serijski broj</string>
    <string name="fragment_servicesheet_buydate">Datum kupovine</string>
    <string name="fragment_servicesheet_warrantydate">Datum isteka garancije</string>
    <string name="fragment_servicesheet_title_intinfo">Podaci o intervenciji</string>
    <string name="fragment_servicesheet_intdescription">Opis intervencije</string>
    <string name="fragment_servicesheet_buyerremark">Primjedba kupca</string>
    <string name="fragment_servicesheet_note">Napomena</string>
    <string name="fragment_servicesheet_warrantyYesNo">Kvar podliježe garanciji</string>
    <string name="fragment_servicesheet_title_sparepartsinfo">Ugrađeni dijelovi</string>
    <string name="fragment_servicesheet_title_costinfo">Podaci o troškovima</string>
    <string name="fragment_servicesheet_priceparts">Troškovi dijelova</string>
    <string name="fragment_servicesheet_pricework">Troškovi rada</string>
    <string name="fragment_servicesheet_pricetravel">Putni troškovi</string>
    <string name="fragment_servicesheet_pricetotal">Ukupno</string>
    <string name="fragment_servicesheet_paymentMethod">Način plaćanja</string>
    <string name="fragment_servicesheet_payedYesNo">Plaćeno</string>
    <string name="fragment_servicesheet_timework">Vrijeme rada servisera</string>
    <string name="fragment_servicesheet_timetravel">Vrijeme servisera na putu</string>
    <string name="fragment_servicesheet_btnSubmitServicesheet">Sačuvaj servisni list</string>
    <string name="fragment_servicesheet_initial_cost">0.00</string>
    <string name="fragment_servicesheet_btnAddSparepart">Dodaj dio</string>
    <string name="fragment_servicesheet_noUsedSpareparts">Nema ugrađenih dijelova</string>
    <string name="fragment_servicesheet_sparepartName">Naziv dijela:</string>
    <string name="fragment_servicesheet_sparepartQty">Količina:</string>
    <string name="fragment_servicesheet_dialog_title">Ugrađeni dijelovi</string>
    <string name="fragment_servicesheet_dialog_sparepartSNin">Serijski broj ugrađenog dijela</string>
    <string name="fragment_servicesheet_dialog_sparepartSNout">Serijski broj skinutog dijela</string>
    <string name="fragment_servicesheet_dialog_sparepartQty">Količina</string>
    <string name="fragment_servicesheet_dialog__sparepart_cancel">Odustani</string>
    <string name="fragment_servicesheet_dialog__sparepart_add">Dodaj dio</string>
    <string name="fragment_servicesheet_empty">Polje ne smije biti prazno</string>
    <string name="fragment_servicesheet_insert_client">Unesite ime klijenta</string>
    <string name="fragment_servicesheet_insert_address">Unesite adresu</string>
    <string name="fragment_servicesheet_insert_place">Unesite mjesto</string>
    <string name="fragment_servicesheet_insert_phone">Unesite kontakt broj</string>
    <string name="fragment_servicesheet_insert_productType">Odaberite vrstu proizvoda</string>
</resources>