<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/fragment_faults_listview_details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/date"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/time"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/client"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/client"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/address"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/place"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_phone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/phone1"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_phone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/phone2"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/description"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/fragment_faults_listview_details_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/note"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/date"
        android:id="@+id/tvDate"
        android:textSize="18sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/time"
        android:layout_below="@+id/tvDate"
        android:id="@+id/tvTime"
        android:textSize="18sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/client"
        android:layout_below="@+id/tvTime"
        android:id="@+id/tvClient"
        android:textSize="18sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/address"
        android:layout_below="@+id/tvClient"
        android:id="@+id/tvAddress"
        android:textSize="18sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/place"
        android:layout_below="@+id/tvAddress"
        android:id="@+id/tvPlace"
        android:textSize="18sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/phone1"
        android:layout_below="@+id/tvPlace"
        android:id="@+id/tvPhone1"
        android:textSize="18sp"
        android:longClickable="true"
        android:textIsSelectable="true"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/phone2"
        android:layout_below="@+id/tvPhone1"
        android:id="@+id/tvPhone2"
        android:textSize="18sp"
        android:longClickable="true"
        android:textIsSelectable="true"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/description"
        android:layout_below="@+id/tvPhone2"
        android:id="@+id/tvDescription"
        android:textSize="18sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/note"
        android:layout_below="@+id/tvDescription"
        android:id="@+id/tvNote"
        android:textSize="18sp"/>


</RelativeLayout>